--- a/style/small.css
+++ b/style/small.css
@@ -119,7 +119,7 @@ header h1 {
   background-image: url("../images/arrow.png");
 }
 
-#breadcrumb li:first-child:before {
+#breadcrumb li:nth-child(2):before {
   background: none;
 }
 
@@ -302,14 +302,18 @@ footer .logo{
   text-align: center;
 }
 .card {
-  min-width: 24em;
+  min-width: 10em;
   background: var(--clrBrw);
-  width: calc(24% - 15px);
+  width: calc(10% - 15px);
   margin: 5px 5px 5px 5px;
   border-radius: var(--border-radius);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  border-style: ridge;
+  border-color: var(--clrBrw);
+  border-width: 3px;
 
   color: var(--clrGrn);
 }
@@ -325,7 +329,7 @@ footer .logo{
 }
 .card .text {
   display: block;
-  margin: 10px auto;
+  margin: 30px 0 20px 0;
   max-width: 500px;
   height: 20px;
   border-radius: var(--border-radius);
