--- a/style/style.css
+++ b/style/style.css
@@ -632,6 +632,7 @@ main dt, dd {
 main dt {
     text-align:right;
     font-weight:bold;
+    font-size: 1.5em;
     clear:left;
     float:left;
 }
@@ -688,6 +689,7 @@ main dt + dt + dd + dt {
   position: absolute;
 	height: 1px;
 	width: 1px;
+  margin: 0;
 	overflow: hidden;
 	clip: rect(1px, 1px, 1px, 1px);
 }
@@ -712,9 +714,4 @@ main dt + dt + dd + dt {
 
 
   width: 0.2em ;
-}
-
-.brw-back {
-  background: var(--clrBrw);
-  border-radius: var(--border-radius);
 }
