--- a/style/style.css
+++ b/style/style.css
@@ -562,7 +562,8 @@ form textarea {
   font-family: 'Geneva', 'Thaoma', 'Arial', sans-serif;
 }
 
-form input:focus
+form input:focus,
+form textarea:focus
 {
   outline: 4px solid var(--clrYlw);
 }
