--- a/style/style.css
+++ b/style/style.css
@@ -94,23 +94,23 @@ header h1 {
 
 .navbar {
   margin-left: 10px;
-	display: grid;            
-	grid-template-columns: 1fr;            
-	grid-gap: 20px;
+  display: grid;            
+  grid-template-columns: 1fr;            
+  grid-gap: 20px;
 
-	text-align: left;
+  text-align: left;
 
-	grid-column: 1;
-	grid-auto-rows: minmax(min-content, max-content);
+  grid-column: 1;
+  grid-auto-rows: minmax(min-content, max-content);
 
-	min-width: 280px;
-	
-	background-color: var(--clrSlm);
+  min-width: 280px;
 
-	color: var(--clrWht);
+  background-color: var(--clrSlm);
 
-	border-style: ridge;
-	border-color: var(--clrBrw);
+  color: var(--clrWht);
+
+  border-style: ridge;
+  border-color: var(--clrBrw);
 }
 
 #breadcrumb {
@@ -122,14 +122,14 @@ header h1 {
 #menu {
 	text-decoration: none;
 
-  	font-size: 1.3em;
-  	font-weight: lighter;
-  	letter-spacing: 1px;
-  	transition: .25s ease-in-out;
+ font-size: 1.3em;
+ font-weight: lighter;
+ letter-spacing: 1px;
+ transition: .25s ease-in-out;
 
 
-	grid-column: 1;
-	grid-auto-rows: minmax(min-content, max-content);
+ grid-column: 1;
+ grid-auto-rows: minmax(min-content, max-content);
 }
 
 .navbar ul {
@@ -206,24 +206,24 @@ a:focus {
 
   background-image: url("../images/horse-tracks.png");
   background-size: cover;
- background-repeat: repeat; 
+  background-repeat: repeat; 
 }
 
 main {
   margin-right: 10px;
 
-	background-color: var(--clrBrw);
+  background-color: var(--clrBrw);
 
-	grid-column: 2/7;
-	grid-row: 1/10; 
+  grid-column: 2/7;
+  grid-row: 1/10; 
 
   display: flex;
   flex-direction: column;
 
-	color: var(--clrWht);
+  color: var(--clrWht);
 
-	border-style: ridge;
-	border-color: var(--clrBrw);
+  border-style: ridge;
+  border-color: var(--clrBrw);
 }
 
 main dl {
@@ -237,9 +237,9 @@ footer {
 
 
   border-radius: 0.5em;
-	background-color: var(--clrBlu);
-	grid-column: 1/7;
-	grid-row: 10; 
+  background-color: var(--clrBlu);
+  grid-column: 1/7;
+  grid-row: 10; 
   margin-top: 10px;
 }
 
@@ -258,13 +258,13 @@ footer ul {
 }
 
 footer ul li{
-  	display: inline-block;
-  	list-style: none;
-  	width: 60px;
-  	height: 18px;
-  	background: white;
-  	border-radius: 0.5em;
-  	margin: 0 auto;
+ display: inline-block;
+ list-style: none;
+ width: 60px;
+ height: 18px;
+ background: white;
+ border-radius: 0.5em;
+ margin: 0 auto;
 
 }
 
@@ -273,16 +273,16 @@ footer .logo{
 	grid-row: 1; 
 
   margin-top: 20px;
-  	width: 50px;
-  	height: 50px;
-  	border-radius: 0.5em;
+  width: 50px;
+  height: 50px;
+  border-radius: 0.5em;
 }
 
 .logo{ 
 
-  	width: 50px;
-  	height: 50px;
-  	border-radius: 0.5em;
+ width: 50px;
+ height: 50px;
+ border-radius: 0.5em;
 }
 
 #img-valid-code {
@@ -350,7 +350,7 @@ footer .logo{
   border-radius: var(--border-radius);
   text-align: center;
   font-size: 1.2em;
- -webkit-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .card .button:hover {
@@ -429,27 +429,29 @@ table th {
 }
 
 #h1data span {
-  background-color: var(--clrBrw);
 	color: var(--clrYlw);
 }
 
 .centerLink {
 	text-align: center;
 	font-size: 1.5em;
+  text-decoration: none;
+
+  border-radius: var(--border-radius);
+  border-style: ridge;
+  border-color: var(--clrYlw);
+
+  padding-right: 5px;
+  padding-left: 5px;
 }
-.centerLink a {
-	background-color: var(--clrBrw);
-	padding-right: 5px;
-	padding-left: 5px;
-	text-decoration: none;
-}
+
 
 .flex-pc {
 	display: flex;
 	flex-wrap: wrap;
   justify-content: center;
 }
-            
+
 ol {
   width: 30%;
   align-self: center;
@@ -470,6 +472,10 @@ ol a {
   text-align: center;
   transition: all .3s ease-out;
   color: var(--clrWht);
+
+  border-style: ridge;
+  border-color: var(--clrBrw);
+  border-width: 3px;
 }
 
 ol a:hover {background: var(--clrSlm); }       
@@ -502,7 +508,7 @@ ol a:hover:after {
   left: -.5em;
   border-left-color: var(--button-color);
 }
-    
+
 form{
   display: flex;
   flex-direction: column;
@@ -580,18 +586,27 @@ form input[type=button]{
 }
 form input[type=submit]:hover,
 form input[type=button]:hover{
-background: var(--clrSlm);
+  background: var(--clrSlm);
 }
 
 form input[type=submit]:disabled,
 form input[type=button]:disabled{
-background: var(--clrGry);
-color: var(--clrBlk);
+  background: var(--clrGry);
+  color: var(--clrBlk);
 }
 form input[type=submit]:disabled:hover,
 form input[type=button]:disabled:hover{
   background: var(--clrGry);
   color: var(--clrBlk);
+}
+
+form input[type=checkbox],
+form input[type=radio] {
+  -ms-transform: scale(2);
+  -moz-transform: scale(2); 
+  -webkit-transform: scale(2); 
+  -o-transform: scale(2); 
+  transform: scale(2);
 }
 
 #v-distance {
@@ -629,43 +644,56 @@ form input[type=button]:disabled:hover{
 
 main dl:after {content:"";display:table;clear:both;}
 main dd {
-    padding:.5em 0;
+  padding:.5em 0;
 }
 main dl {
-    width:100%;
+  width:100%;
 }
 main dt, dd {
-    display: inline-block;
-    width:30%;
+  display: inline-block;
+  width:50%;
 }
 main dt {
-    text-align:right;
-    font-weight:bold;
-    font-size: 1.5em;
-    clear:left;
-    float:left;
+  text-align:right;
+  font-weight:bold;
+  font-size: 1.5em;
+  clear:left;
+  float:left;
 }
 main dd {
-    width:70%;
-    padding-left:1em;
-    clear:right;
+  width:70%;
+  padding-left:1em;
+  clear:right;
+
+  font-size: 1.2em;
+  letter-spacing: 1px;
 }
 main dd + dd {
-    float:right;
-    clear:both;
+  float:right;
+  clear:both;
 }
 main dt:first-child {
-    padding-top:.5em;
+  padding-top:.5em;
 }
 main dd + dt {
-    clear:both;
-    padding-top:.5em;
+  clear:both;
+  padding-top:.5em;
 }
 main dt + dt + dd {
-    margin-top: -2em;
+  margin-top: -2em;
 }
 main dt + dt + dd + dt {
-    margin-top: 2em;
+  margin-top: 2em;
+}
+
+main li {
+  font-size: 1.3em;
+  letter-spacing: 1px;
+}
+
+.fonting {
+  font-size: 1.3em;
+  letter-spacing: 1px;
 }
 
 .flex-home {
@@ -679,7 +707,6 @@ main dt + dt + dd + dt {
   text-align: center;
 }
 #h1Bitscuit span {
-  background-color: var(--clrBrw);
   color: var(--clrYlw);
 }
 #h1Bitscuit:after {
@@ -696,11 +723,11 @@ main dt + dt + dd + dt {
 
 .visually-hidden {
   position: absolute;
-	height: 1px;
-	width: 1px;
+  height: 1px;
+  width: 1px;
   margin: 0;
-	overflow: hidden;
-	clip: rect(1px, 1px, 1px, 1px);
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
 }
 
 .flex-div {
